--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /obj/Debug
+/.vs/Perfmon/v15
+/bin/Debug
+/CPU/.vs
